--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ img {
 }
 .eclipse__yellow {
   position: absolute;
-  width: 1848px;
+  /* width: 1848px; */
   height: 1848px;
   top: 6129px;
   left: 0;
@@ -160,7 +160,7 @@ span {
 .main__inner {
   position: relative;
   width: 1440px;
-  margin: 0 auto;
+  margin: auto;
 }
 .main__text {
   font-family: "Inter", sans-serif;
@@ -173,6 +173,7 @@ span {
   width: 1025px;
   left: 142px;
   position: absolute;
+  margin: 0;
 }
 .main__blocks {
   position: relative;
@@ -510,6 +511,27 @@ span {
 }
 
 .main__btn {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+
+  font-family: "Inter", sans-serif;
+  font-size: 22px;
+  font-weight: 400;
+  text-decoration: none;
+  color: #000;
+  background-color: #7BFFC1;
+  border: #7bffc143 0.5px solid;
+  border-radius: 248px;
+  line-height: 35px;
+  padding: 11px 30px;
+  gap: 11px;
+}
+.main__btn__invisible {
+  display: none;
+}
+.main__btn__visible {
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -1007,7 +1029,7 @@ span {
     font-size: 24px;
     font-weight: 300;
   }
-
+   /* == HEADER BLOCKS MOBILE == */
   .block__1,
   .block__2,
   .block__3 {
@@ -1046,7 +1068,7 @@ span {
   .eclipse__yellow {
     display: none;
   }
-  
+     /* == MAIN TEXT == */
   .main__inner {
     position: relative;
     width: 375px;
@@ -1065,6 +1087,153 @@ span {
   .blocks__desc {
     display: none;
   }
+    /* == MAIN BLOCKS == */
+  .block__4,
+  .block__5,
+  .block__6,
+  .block__7,
+  .block__8 {
+    position: relative;
+    display: flex;
+    top: 500px;
+    width: 343px;
+    height: 343px;
+    left: 335px;
+    border: #7bffc143 0.5px solid;
+    border-radius: 29.66px;
+    /* margin-right: 30px; */
+    margin-bottom: 16px;
+  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .lines__bar {
+    position: absolute;
+    width: 228px;
+    height: 107px;
+    left: 97px;
+    top: 110px;
+  }
+    /* == AUDIENCE INTERESTS MOBILE == */
+  .audience__title {
+    position: absolute;
+    font-family: "Inter", sans-serif;
+    font-size: 24px;
+    font-weight: 300;
+    margin-top: -130px;
+    left: 335px;
+    width: 300px;
+    /* margin-bottom: 183px; */
+  }
+  
+  .main__btn {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+  
+    font-family: "Inter", sans-serif;
+    font-size: 19px;
+    font-weight: 400;
+    text-decoration: none;
+    color: #000;
+    /* background-color: #7BFFC1; */
+    border: #7bffc143 0.5px solid;
+    border-radius: 248px;
+    line-height: 35px;
+    padding: 11px 30px;
+    gap: 11px;
+  }
+  
+  .main__btn__invisible {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+  
+    font-family: "Inter", sans-serif;
+    font-size: 19px;
+    font-weight: 400;
+    text-decoration: none;
+    color: #000;
+    background-color: #7BFFC1;
+    border: #7bffc143 0.5px solid;
+    border-radius: 248px;
+    line-height: 35px;
+    padding: 11px 30px;
+    gap: 11px;
+  }
+.main__btn__visible {
+  display: none;
+}
 
+  .interests__list {
+    position: absolute;
+    display: flex;
+    width: 375px;
+    gap: 11px;
+    flex-wrap: wrap;
+    top: -300px;
+    left: 335px;
+    list-style: none;
+  }
+  .reference__search {
+    display: flex;
+    position: absolute;
+    font-family: "Roboto", sans-serif;
+    color: #7bffc1;
+    font-size: 23px;
+    font-weight: 400;
+    margin-top: 490px;
+    right: -189px;
+    margin-bottom: 183px;
+    width: 228px;
+    list-style: none;
+  }
 
+  .arrow {
+    width: 13px;
+    height: 12px;
+    position: absolute;
+   
+    left: -136px;
+    top: -130px;
+  }
+ .searches {
+  display: none;
+ }
+ .main__btn__2 {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  text-decoration: none;
+  list-style: none;
+
+  color: #000;
+  background-color: #7BFFC1;
+  border: 0.5px solid;
+  border-radius: 248px;
+  line-height: 35px;
+  padding: 11px 30px;
+  gap: 11px;
+  width: 337px;
+  margin-bottom: 11px;
+ }
+ .party__list__right {
+  display: none;
+ }
+ .party__list__left {
+  margin-top: 580px;
+  position: absolute;
+  display: flex;
+  list-style: none;
+  left: 334px;
+ }
 }
