--- a/css/main.css
+++ b/css/main.css
@@ -7,30 +7,25 @@
   font-family: "Inter", sans-serif;
   font-family: "Roboto", sans-serif;
   font-family: "MADE Outer Sans Alt", sans-serif;
-
 }
 
-
-body, html {
+body,
+html {
   background: #0d0d0d;
   color: #fff;
 }
-
-
 
 /* == SECTION HEADER == */
 .section__outer {
   background-color: #0d0d0d;
   height: 100%;
   position: relative;
-  
 }
 .section__inner {
   position: relative;
   background-color: #0d0d0d;
   margin: 0 auto;
   width: 1440px;
-
 }
 img {
   position: relative;
@@ -495,9 +490,7 @@ span {
   margin: 0 auto;
   top: 700px;
   list-style: none;
-
 }
-
 
 /* == AUDIENCE INTERESTS ==*/
 .audience__title {
@@ -521,7 +514,7 @@ span {
   font-weight: 400;
   text-decoration: none;
   color: #000;
-  background-color: #7BFFC1;
+  background-color: #7bffc1;
   border: #7bffc143 0.5px solid;
   border-radius: 248px;
   line-height: 35px;
@@ -542,7 +535,7 @@ span {
   font-weight: 400;
   text-decoration: none;
   color: #000;
-  background-color: #7BFFC1;
+  background-color: #7bffc1;
   border: #7bffc143 0.5px solid;
   border-radius: 248px;
   line-height: 35px;
@@ -575,6 +568,7 @@ li {
   list-style: none;
 }
 
+
 .party__list__left {
   margin-top: 630px;
   position: absolute;
@@ -595,7 +589,7 @@ li {
   list-style: none;
 
   color: #000;
-  background-color: #7BFFC1;
+  background-color: #7bffc1;
   border: 0.5px solid;
   border-radius: 248px;
   line-height: 35px;
@@ -610,6 +604,12 @@ li {
   left: 698px;
   list-style: none;
 }
+
+.search__list {
+  display: flex;
+  flex-direction: column;
+}
+
 .reference__search {
   display: flex;
   position: absolute;
@@ -627,7 +627,7 @@ li {
   width: 12px;
   height: 12px;
   position: absolute;
- 
+
   left: 555px;
   bottom: 425px;
 }
@@ -963,10 +963,11 @@ span {
 /* MOBILE FINAL */
 
 @media (max-width: 375px) {
-   body, html {
+  body,
+  html {
     width: 375px;
-   }
-   .section__inner {
+  }
+  .section__inner {
     position: relative;
     background-color: #0d0d0d;
     margin: 0 auto;
@@ -992,7 +993,6 @@ span {
     font-weight: 300;
     color: #fff;
     width: 322px;
-
   }
   span {
     font-size: 69.94px;
@@ -1029,7 +1029,7 @@ span {
     font-size: 24px;
     font-weight: 300;
   }
-   /* == HEADER BLOCKS MOBILE == */
+  /* == HEADER BLOCKS MOBILE == */
   .block__1,
   .block__2,
   .block__3 {
@@ -1038,7 +1038,7 @@ span {
     height: 249px;
     border: #7bffc143 0.5px solid;
     border-radius: 32px;
-  
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1053,7 +1053,6 @@ span {
 
     left: 380px;
     margin-bottom: -480px;
-
   }
 
   .gradient {
@@ -1068,7 +1067,7 @@ span {
   .eclipse__yellow {
     display: none;
   }
-     /* == MAIN TEXT == */
+  /* == MAIN TEXT == */
   .main__inner {
     position: relative;
     width: 375px;
@@ -1087,7 +1086,7 @@ span {
   .blocks__desc {
     display: none;
   }
-    /* == MAIN BLOCKS == */
+  /* == MAIN BLOCKS == */
   .block__4,
   .block__5,
   .block__6,
@@ -1103,7 +1102,7 @@ span {
     border-radius: 29.66px;
     /* margin-right: 30px; */
     margin-bottom: 16px;
-  
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1116,58 +1115,59 @@ span {
     left: 97px;
     top: 110px;
   }
-    /* == AUDIENCE INTERESTS MOBILE == */
+  /* == AUDIENCE INTERESTS MOBILE == */
   .audience__title {
     position: absolute;
     font-family: "Inter", sans-serif;
     font-size: 24px;
     font-weight: 300;
-    margin-top: -130px;
+    margin-top: -143px;
     left: 335px;
     width: 300px;
     /* margin-bottom: 183px; */
   }
-  
+
   .main__btn {
     position: relative;
     display: flex;
     justify-content: space-between;
     list-style: none;
-  
+
     font-family: "Inter", sans-serif;
     font-size: 19px;
     font-weight: 400;
     text-decoration: none;
-    color: #000;
-    /* background-color: #7BFFC1; */
+    color: #fff;
+    background-color: #7bffc100;
     border: #7bffc143 0.5px solid;
     border-radius: 248px;
     line-height: 35px;
     padding: 11px 30px;
     gap: 11px;
   }
-  
+
   .main__btn__invisible {
     position: relative;
     display: flex;
     justify-content: space-between;
     list-style: none;
-  
+
     font-family: "Inter", sans-serif;
     font-size: 19px;
     font-weight: 400;
     text-decoration: none;
-    color: #000;
-    background-color: #7BFFC1;
+    color: #fff;
+    background-color: #7bffc100;
+
     border: #7bffc143 0.5px solid;
     border-radius: 248px;
     line-height: 35px;
     padding: 11px 30px;
     gap: 11px;
   }
-.main__btn__visible {
-  display: none;
-}
+  .main__btn__visible {
+    display: none;
+  }
 
   .interests__list {
     position: absolute;
@@ -1179,6 +1179,17 @@ span {
     left: 335px;
     list-style: none;
   }
+  .arrow {
+    width: 112px;
+    height: 112px;
+    position: absolute;
+    /* margin-top: 888px; */
+    /* right: -189px; */
+    margin-bottom: 183px;
+    z-index: 25;
+    left: 555px;
+    /* bottom: 425px; */
+  }
   .reference__search {
     display: flex;
     position: absolute;
@@ -1186,54 +1197,130 @@ span {
     color: #7bffc1;
     font-size: 23px;
     font-weight: 400;
-    margin-top: 490px;
+    margin-top: 888px;
     right: -189px;
     margin-bottom: 183px;
     width: 228px;
     list-style: none;
   }
-
-  .arrow {
-    width: 13px;
-    height: 12px;
-    position: absolute;
-   
-    left: -136px;
-    top: -130px;
+  
+ 
+  .searches {
+    display: none;
   }
- .searches {
-  display: none;
- }
- .main__btn__2 {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  .main__btn__2 {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 
-  font-family: "Inter", sans-serif;
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    text-decoration: none;
+    list-style: none;
+
+    color: #fff;
+    background-color: #7bffc100;
+    border:#7bffc143 0.5px solid;
+    border-radius: 248px;
+    line-height: 35px;
+    padding: 11px 30px;
+    gap: 11px;
+    width: 337px;
+    margin-bottom: 11px;
+  }
+  .party__list__right {
+    display: none;
+  }
+  .party__list__left {
+    margin-top: 500px;
+    position: absolute;
+    display: flex;
+    list-style: none;
+    left: 334px;
+  }
+
+/* == BLOCK 4 CONTENT 4 == */
+.content__4 {
+  position: absolute;
+  width: 163px;
+  height: 163px;
+  left: 89px;
+  top: 89px;
+}
+
+/* == BLOCK-5 CONTENT-5 == */
+.lines__bar {
+  position: absolute;
+  width: 228px;
+  height: 107px;
+  left: 85px;
+  top: 110px;
+}
+.line__msc {
+  top: 134px;
+  left: 85px;
+}
+.line__spb {
+  top: 171px;
+  left: 85px;
+}
+.axis__line {
+  left: 72px;
+  top: 223px;
+}
+.view__msc {
+  position: absolute;
+  top: 140px;
+  right: 55px;
+}
+.view__spb {
+  position: absolute;
+  bottom: 150px;
+  right: 112px;
+}
+.label__msc {
+  position: absolute;
+  left: 25px;
+  top: 138px;
+}
+.label__spb {
+  position: absolute;
+  left: 25px;
+  top: 178px;
+}
+
+/* == BLOCK-6 CONTENT-6 == */
+.content__6 {
+  position: absolute;
+  width: 163px;
+  height: 163px;
+  left: 89px;
+  top: 89px;
+}
+/* == BLOCK-7 CONTENT-7 == */
+.content__7 {
+position: absolute;
+width: 280px;
+height: 229px;
+left: 30px;
+top: 50px;
+}
+/* == BLOCK-8 CONTENT-8 == */
+.content__8 {
+  position: absolute;
+  width: 230px;
+  height: 230px;
+  left: 55px;
+  top: 63px;
+}
+.description {
+  font-family: "Roboto", sans-serif;
   font-size: 20px;
   font-weight: 400;
-  text-decoration: none;
-  list-style: none;
+  margin-top: 277px;
+  z-index: 7;
+}
 
-  color: #000;
-  background-color: #7BFFC1;
-  border: 0.5px solid;
-  border-radius: 248px;
-  line-height: 35px;
-  padding: 11px 30px;
-  gap: 11px;
-  width: 337px;
-  margin-bottom: 11px;
- }
- .party__list__right {
-  display: none;
- }
- .party__list__left {
-  margin-top: 580px;
-  position: absolute;
-  display: flex;
-  list-style: none;
-  left: 334px;
- }
 }
