--- a/css/main.css
+++ b/css/main.css
@@ -498,7 +498,7 @@ span {
   font-family: "Inter", sans-serif;
   font-size: 44px;
   font-weight: 300;
-  margin-top: 177px;
+  margin-top: 148px;
   left: 95px;
   margin-bottom: 183px;
 }
@@ -628,8 +628,8 @@ li {
   height: 12px;
   position: absolute;
 
-  left: 555px;
-  bottom: 425px;
+  left: 1252px;
+  bottom: -553px;
 }
 
 /* == OUR RESOURCES / НАШИ РЕСУРСЫ ==*/
@@ -1180,15 +1180,9 @@ span {
     list-style: none;
   }
   .arrow {
-    width: 112px;
-    height: 112px;
-    position: absolute;
-    /* margin-top: 888px; */
-    /* right: -189px; */
+    top: 897px;
     margin-bottom: 183px;
-    z-index: 25;
-    left: 555px;
-    /* bottom: 425px; */
+    left: 571px;
   }
   .reference__search {
     display: flex;
@@ -1198,7 +1192,7 @@ span {
     font-size: 23px;
     font-weight: 400;
     margin-top: 888px;
-    right: -189px;
+    right: -198px;
     margin-bottom: 183px;
     width: 228px;
     list-style: none;
@@ -1322,5 +1316,12 @@ top: 50px;
   margin-top: 277px;
   z-index: 7;
 }
+.possibilities__title {
+  font-size: 24px;
+  top: 1673px;
+  left: 344px;
+  width: 300px;
+}
+
 
 }
